<resources>
    <string name="app_name">Login Register</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_phone">Enter Phone Number</string>
    <string name="error_message_identity">Enter Your Identity</string>
    <string name="error_message_usertype">Select Designition</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_message_spinner">Select your Station</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_oil_id">Input Id</string>
    <string name="error_spare_id">Input Spare Id</string>
    <string name="error_oil_category">Input Category</string>
    <string name="error_spare_category">Input Category</string>
    <string name="error_oil_qnty">Input Quantity</string>
    <string name="error_spare_qnty">Input Quantity</string>
    <string name="error_oil_bp">Input Buying Price</string>
    <string name="error_oil_sp">Input Selling Price</string>
    <string name="oil_data_success">Data Registration Successful</string>
    <string name="error_oilsale_cat">Input Category </string>
    <string name="oilsale_transact_success">Transaction Successful</string>
    <string name="oilsale_transact_error">Category entered does not exist!</string>
    <string name="error_oilsale_qnty">Quantity cannot be empty</string>
    <string name="error_oil_category_exists">Category Exists, Update Quantity!</string>
    <string name="action_settings">Settings</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="activity_title_home">Transactions</string>
    <string name="msg_no_notes">No Transactions Found!</string>
    <string name="lbl_new_note_title">New Credit Issue</string>
    <string name="lbl_edit_note_title">Edit Transaction</string>
    <string name="hint_enter_note">Record Transaction!</string>
    <string name="title_activity_mainn">MainnActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>
